# GhostWriter

./: .env.example  .gitignore  BACKEND_INTEGRATION_GUIDE.md  ENHANCEMENT_SUMMARY.md  PROVIDER_EXTENSION_SUMMARY.md  README.md  apify_enrich.py  app.py  backend_integrations.py  box_client.py  demo_enhanced_classification.py  example_integrations.py  feedback.py  ghostwriter_cli.py  granola_client.py  integration_test.py  llm_provider.py  main.py  manage_metadata.py  models.py  pipeline.py  pyproject.toml  start_backend_services.py  test_providers.py  transcript_providers.py  ui.py  ui_service.py  validate_changes.py  voice.py  zoom_client.py
.github/workflows/: tests.yml
.kiro/specs/ghostwriter/: design.md  requirements.md
agents/: orchestrator.py  tools.py  worker.py
providers/: __init__.py  azure.py  base.py  bedrock.py  factory.py  gcp.py
sample/: demo_single_task.txt  standup_2024_01_08.txt  standup_2024_01_10.txt  standup_2024_01_12.txt
sample_repo/: README.md  session.py  user.py
tests/: test_apify_enrich.py  test_box_client.py  test_cli.py  test_e2e_demo.py  test_e2e_single_task.py  test_enhanced_classification.py  test_metadata.py  test_models.py  test_pipeline.py  test_server.py  test_tools.py  test_ui_service.py
transcripts/: standup_2026_05_30_0049.txt  standup_2026_05_30_0055.txt  standup_2026_05_30_1115.txt  standup_2026_05_30_1120.txt
transcripts/simple_tasks/: standup_2026_05_30_0001.txt
web/: requirements.txt  start.sh
web/api/: server.py
web/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
