[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostwriter"
version = "0.1.0"
description = "AI-powered neglected-task auto-implementer using Box AI and AWS Bedrock"
requires-python = ">=3.11"
dependencies = [
    "typer==0.12.3",
    "pydantic==2.7.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "strands-agents==0.1.6",
    "boto3==1.34.131",
    "hypothesis==6.103.1",
    "pytest==8.2.2",
    "pytest-mock==3.14.0",
]

[project.scripts]
ghostwriter = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests requiring Box/Bedrock credentials and sample_repo (deselected by default; run with `pytest -m integration`)",
]

[tool.ruff]
line-length = 100
