[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostwriter"
version = "0.1.0"
description = "Turn standups into shipped code using Box AI and AWS Bedrock"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "strands-agents>=0.1",
    "boto3>=1.34",
    "rich>=13.0",
    "deepgram-sdk>=3.0,<4.0",
    "sounddevice>=0.5",
    "numpy>=1.26",
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "pipeline.py",
    "box_client.py",
    "models.py",
    "voice.py",
    "ui.py",
    "feedback.py",
    "agents",
]

[project.scripts]
ghostwriter = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-m 'not integration'"
markers = [
    "integration: end-to-end tests requiring Box/Bedrock credentials and sample_repo (deselected by default; run with `pytest -m integration`)",
]

[tool.ruff]
line-length = 100
